<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="match_parent"
            android:layout_height="match_parent">
    <LinearLayout

            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"

            android:orientation="vertical"

            android:padding="16dp">
        <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/login_title"
                android:textSize="24sp"
                android:textColor="@color/black"
                android:textStyle="bold"
                android:id="@+id/loginTitle"/>
        <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/login_description"
                android:textSize="16sp"
                android:layout_marginTop="16dp"
                android:textColor="@color/black"
                android:id="@+id/loginDescription"/>


        <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textEmailAddress"
                android:hint="@string/hint_email"
                android:layout_marginTop="40dp"
                android:layout_marginBottom="16dp"
                android:backgroundTint="@color/input"

                android:padding="16dp"
                android:layout_gravity="center"
                android:background="@drawable/rounded_corner"

                android:ems="10"
                android:id="@+id/inputEmail"/>
        <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword"
                android:hint="@string/hint_password"
                android:layout_marginBottom="32dp"
                android:backgroundTint="@color/input"

                android:padding="16dp"
                android:layout_gravity="center"
                android:background="@drawable/rounded_corner"

                android:ems="10"
                android:id="@+id/inputPassword"/>
        <Button
                android:text="@string/login_button_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" android:id="@+id/loginButton"
                android:backgroundTint="@color/black"
                android:background="@drawable/rounded_corner"
                android:layout_gravity="center"
                android:textColor="@color/white"/>


    </LinearLayout>
</ScrollView>
