<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:app="http://schemas.android.com/apk/res-auto"
                                                   xmlns:tools="http://schemas.android.com/tools" android:layout_height="match_parent"
                                                   xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent">
    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"


            android:padding="16dp"
            tools:context=".MainActivity" app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toTopOf="parent">
        <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/login_title"
                android:textSize="24sp"
                android:textColor="@color/black"
                android:textStyle="bold"
                android:id="@+id/loginTitle"/>
        <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/login_description"
                android:textSize="16sp"
                android:layout_marginTop="16dp"
                android:textColor="@color/black"
                android:id="@+id/loginDescription"/>


        <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textEmailAddress"
                android:hint="@string/hint_email"
                android:layout_marginTop="40dp"
                android:layout_marginBottom="16dp"
                android:backgroundTint="@color/input"

                android:padding="16dp"
                android:layout_gravity="center"
                android:background="@drawable/rounded_corner"

                android:ems="10"
                android:id="@+id/inputEmail" tools:layout_editor_absoluteY="433dp"
                tools:layout_editor_absoluteX="119dp" android:autofillHints="name" tools:ignore="LabelFor"/>
        <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword"
                android:hint="@string/hint_password"
                android:layout_marginBottom="32dp"
                android:backgroundTint="@color/input"

                android:padding="16dp"
                android:layout_gravity="center"
                android:background="@drawable/rounded_corner"

                android:ems="10"
                android:id="@+id/inputPassword" tools:layout_editor_absoluteY="433dp"
                tools:layout_editor_absoluteX="119dp" android:autofillHints="name" tools:ignore="LabelFor"/>
        <Button
                android:text="@string/login_button_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" android:id="@+id/loginButton"
                android:backgroundTint="@color/black"
                android:background="@drawable/rounded_corner"
                android:layout_gravity="center"
                android:textColor="@color/white"/>


    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>